--- a/Frontend/Pie_Bags.html
+++ b/Frontend/Pie_Bags.html
@@ -31,6 +31,22 @@
       color: white;
       font-weight: bold;
     }
+        /* ===========================
+       FOOTER
+    ============================ */
+    footer.site-footer {
+      width: 100%;
+      padding: 20px;
+      text-align: center;
+      background: #222;
+      color: #fff;
+      margin-top: 290px;
+    }
+        /* Bigger text on desktop */
+   @media (min-width: 768px) {
+  footer.site-footer {
+    font-size: 29px;
+  }
   </style>
 </head>
 <body>
@@ -82,8 +98,9 @@
 
   <div class="product-container">
 
-    <!-- Product Card 1 -->
-    <div class="wrapper" data-product-id="pie001" data-sold-out="false">
+
+        <!-- Product Card 1 -->
+    <div class="wrapper" data-product-id="pie001" data-sold-out="true">
       <div class="sold-out-badge">SOLD OUT</div>
       <div class="wishlist-btn">
         <i class="material-icons">favorite_border</i>
@@ -91,15 +108,15 @@
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://cdn.pixabay.com/photo/2017/06/21/07/57/fashion-2423641_640.jpg" alt="Pie Bag 1" />
+            <img src="IMG_6726.PNG" alt="Pie Bag 1" />
           </a>
         </div>
         <div class="bottom">
           <div class="left">
             <div class="details">
-              <h1>Pie Bag 1</h1>
-              <p class="discounted-price">₹1550</p>
-              <p class="mrp">MRP: <span>₹2600</span></p>
+              <h1> White Pie Bag</h1>
+              <p class="discounted-price">₹1360</p>
+              <p class="mrp">MRP: <span>₹1699</span></p>
             </div>
             <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
             <div class="buy-now">BUY<br>NOW</div>
@@ -108,8 +125,8 @@
       </div>
     </div>
 
-    <!-- Product Card 2 -->
-    <div class="wrapper" data-product-id="pie002" data-sold-out="true">
+        <!-- Product Card 2 -->
+    <div class="wrapper" data-product-id="pie002" data-sold-out="false">
       <div class="sold-out-badge">SOLD OUT</div>
       <div class="wishlist-btn">
         <i class="material-icons">favorite_border</i>
@@ -117,15 +134,92 @@
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://cdn.pixabay.com/photo/2016/11/29/12/53/handbag-1866608_640.jpg" alt="Pie Bag 2" />
+            <img src="IMG_6726.PNG" alt="Pie Bag 1" />
           </a>
         </div>
         <div class="bottom">
           <div class="left">
             <div class="details">
-              <h1>Pie Bag 2</h1>
-              <p class="discounted-price">₹1850</p>
-              <p class="mrp">MRP: <span>₹2990</span></p>
+              <h1>Pink Pie Bag</h1>
+              <p class="discounted-price">₹1350</p>
+              <p class="mrp">MRP: <span>₹1699</span></p>
+            </div>
+            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
+            <div class="buy-now">BUY<br>NOW</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+        <!-- Product Card 3 -->
+    <div class="wrapper" data-product-id="pie003" data-sold-out="false">
+      <div class="sold-out-badge">SOLD OUT</div>
+      <div class="wishlist-btn">
+        <i class="material-icons">favorite_border</i>
+      </div>
+      <div class="container">
+        <div class="top">
+          <a href="productdetails.html">
+            <img src="IMG_6727.PNG" alt="Pie Bag 1" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="left">
+            <div class="details">
+              <h1>Beige Sling Bag</h1>
+              <p class="discounted-price">₹600</p>
+              <p class="mrp">MRP: <span>₹1599</span></p>
+            </div>
+            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
+            <div class="buy-now">BUY<br>NOW</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product Card 4 -->
+    <div class="wrapper" data-product-id="pie004" data-sold-out="false">
+      <div class="sold-out-badge">SOLD OUT</div>
+      <div class="wishlist-btn">
+        <i class="material-icons">favorite_border</i>
+      </div>
+      <div class="container">
+        <div class="top">
+          <a href="productdetails.html">
+            <img src="IMG_6726.PNG" alt="Pie Bag 2" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="left">
+            <div class="details">
+              <h1>Pink Sling Bag</h1>
+              <p class="discounted-price">₹600</p>
+              <p class="mrp">MRP: <span>₹1599</span></p>
+            </div>
+            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
+            <div class="buy-now">BUY<br>NOW</div>
+          </div>
+        </div>
+      </div>
+    </div>
+        <!-- Product Card 5 -->
+    <div class="wrapper" data-product-id="pie005" data-sold-out="false">
+      <div class="sold-out-badge">SOLD OUT</div>
+      <div class="wishlist-btn">
+        <i class="material-icons">favorite_border</i>
+      </div>
+      <div class="container">
+        <div class="top">
+          <a href="productdetails.html">
+            <img src="IMG_6729.PNG" alt="Pie Bag 1" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="left">
+            <div class="details">
+              <h1>Blue Sling Bag</h1>
+              <p class="discounted-price">₹600</p>
+              <p class="mrp">MRP: <span>₹1599</span></p>
             </div>
             <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
             <div class="buy-now">BUY<br>NOW</div>
@@ -247,6 +341,79 @@ document.addEventListener("DOMContentLoaded", () => {
       container.classList.add(`view-${columns}`);
     });
   });
+});
+</script>
+<!-- Only the modified parts are important, the rest of your HTML/CSS remains unchanged -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const productWrappers = document.querySelectorAll(".wrapper");
+
+  productWrappers.forEach(wrapper => {
+    const productId = wrapper.dataset.productId;
+    const productName = wrapper.querySelector(".details h1").textContent;
+    const productPrice = wrapper.querySelector(".details .discounted-price").textContent;
+    const productMRP = wrapper.querySelector(".details .mrp span")?.textContent || "";
+    const productImage = wrapper.querySelector(".top img").src;
+    const soldOutStatus = wrapper.dataset.soldOut === "true";
+
+    const product = {
+      id: productId,
+      name: productName,
+      price: productPrice,
+      mrp: productMRP,
+      image: productImage,
+      quantity: 1,
+      soldOut: soldOutStatus,
+      category: "candy-bags" // ✅ Important: identifies the category
+    };
+
+    // LINK TO PRODUCT DETAILS
+    wrapper.querySelector(".top a").addEventListener("click", (e) => {
+      e.preventDefault();
+      localStorage.setItem("selectedProduct", JSON.stringify(product)); // Save clicked product
+      window.location.href = "productdetails.html";
+    });
+
+    // SOLD OUT, WISHLIST, ADD TO CART, BUY NOW logic (same as before)
+    // ...
+  });
+});
+</script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const productWrappers = document.querySelectorAll(".wrapper");
+
+  // Fetch existing allProducts array or initialize empty
+  let allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
+
+  productWrappers.forEach(wrapper => {
+    const productId = wrapper.dataset.productId;
+    const productName = wrapper.querySelector(".details h1").textContent;
+    const productPrice = wrapper.querySelector(".details .discounted-price").textContent;
+    const productMRP = wrapper.querySelector(".details .mrp span")?.textContent || "";
+    const productImage = wrapper.querySelector(".top img").src;
+    const soldOutStatus = wrapper.dataset.soldOut === "true";
+    const category = wrapper.closest(".bag-section h2")?.textContent?.toLowerCase() || "other";
+
+    // Create product object
+    const product = {
+      id: productId,
+      name: productName,
+      price: productPrice,
+      mrp: productMRP,
+      image: productImage,
+      soldOut: soldOutStatus,
+      category: category
+    };
+
+    // Check if product already exists in allProducts
+    if (!allProducts.find(p => p.id === productId)) {
+      allProducts.push(product);
+    }
+  });
+
+  // Save updated allProducts array back to localStorage
+  localStorage.setItem("allProducts", JSON.stringify(allProducts));
 });
 </script>
 
