--- a/Frontend/wishlist.html
+++ b/Frontend/wishlist.html
@@ -10,120 +10,252 @@
 
   <style>
     /* ===== SOLD OUT BADGE ===== */
-    .sold-out-badge { display: none; position: absolute; top: 10px; left: 10px; background: red; color: white; font-weight: bold; padding: 5px 10px; border-radius: 5px; font-size: 14px; z-index: 10; }
-    .wrapper.sold-out { opacity: 0.6; pointer-events: none; }
-    .wrapper.sold-out .buy-now { background: gray !important; color: white !important; cursor: not-allowed; }
+    .sold-out-badge {
+      display: none;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: red;
+      color: white;
+      font-weight: bold;
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-size: 14px;
+      z-index: 10;
+    }
+    .wrapper.sold-out {
+      opacity: 0.6;
+    }
+    .wrapper.sold-out .buy-now {
+      background: gray !important;
+      color: white !important;
+      cursor: not-allowed;
+    }
+
+    /* ===========================
+       EMPTY WISHLIST MESSAGE
+    ============================ */
+    .empty-wishlist-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      
+      min-height: 400px; /* adjust as needed */
+    }
+
+    .empty-wishlist-text {
+      font-size: 26px;
+      font-weight: 600;
+      color: #333;
+      text-align: center;
+    }
+    .product-container.empty {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  min-height: 400px; /* adjust as needed */
+   }
+
+    /* Mobile adjustments */
+    @media (max-width: 768px) {
+      .empty-wishlist-text {
+        font-size: 22px;
+      }
+    }
+
+    /* ===========================
+       FOOTER
+    ============================ */
+    footer.site-footer {
+      width: 100%;
+      padding: 20px;
+      text-align: center;
+      background: #222;
+      
+      color: #fff;
+      margin-top: 1090px;
+    }
+    /* Bigger text on desktop */
+   @media (min-width: 768px) {
+  footer.site-footer {
+    font-size: 29px;
+  }
   </style>
 </head>
 
 <body>
 
 <header>
-  <div class="logo">V LADY<div class="tagline">Versatile Lady</div></div>
+  <div class="logo">
+    V LADY
+    <div class="tagline">Versatile Lady</div>
+  </div>
   <nav>
     <ul class="nav-links">
-      <li><a href="index.html"><i class="fa fa-house-chimney"></i></a></li>
+      <li><a href="mainpage.html"><i class="fa fa-house-chimney"></i></a></li>
       <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
       <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-      <li><a href="index.html"><i class="fa fa-envelope"></i></a></li>
+      <li><a href="mainpage.html"><i class="fa fa-envelope"></i></a></li>
     </ul>
   </nav>
 </header>
 
-<div class="pink-banner"><div class="scrolling-text">THE LADY WHO LEADS</div></div>
+<!-- Pink Banner -->
+<div class="pink-banner">
+  <div class="scrolling-text">THE LADY WHO LEADS</div>
+</div>
 
 <main class="bag-section">
   <h2>MY WISHLIST ❤️</h2>
+
+  <!-- View buttons -->
   <div class="view-toggle">
-    <button class="view-btn" data-columns="1" title="1 per row">1</button>
-    <button class="view-btn" data-columns="2" title="2 per row">2</button>
+    <button class="view-btn" data-columns="1" title="1 per row">
+      <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <rect x="3" y="3" width="18" height="18" rx="2" />
+      </svg>
+    </button>
+
+    <button class="view-btn" data-columns="2" title="2 per row">
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+           stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <rect x="3" y="3" width="18" height="18" rx="2" />
+        <line x1="3" y1="12" x2="21" y2="12" />
+        <line x1="12" y1="3" x2="12" y2="21" />
+      </svg>
+    </button>
   </div>
+
   <div class="product-container"></div>
 </main>
 
 <script>
-document.addEventListener('DOMContentLoaded', async () => {
-  const wishlistContainer = document.querySelector('.product-container');
-  const viewButtons = document.querySelectorAll('.view-btn');
+document.addEventListener("DOMContentLoaded", () => {
+  const wishlistContainer = document.querySelector(".product-container");
+  const viewButtons = document.querySelectorAll(".view-btn");
+  let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
 
   const defaultColumns = window.innerWidth < 768 ? 1 : 2;
   wishlistContainer.classList.add(`view-${defaultColumns}`);
+
   viewButtons.forEach(btn => {
-    if (parseInt(btn.dataset.columns) === defaultColumns) btn.classList.add('active');
-    btn.addEventListener('click', () => {
-      viewButtons.forEach(b => b.classList.remove('active'));
-      btn.classList.add('active');
-      wishlistContainer.classList.remove('view-1', 'view-2', 'view-4');
+    if (parseInt(btn.dataset.columns) === defaultColumns) btn.classList.add("active");
+
+    btn.addEventListener("click", () => {
+      viewButtons.forEach(b => b.classList.remove("active"));
+      btn.classList.add("active");
+      wishlistContainer.classList.remove("view-1", "view-2", "view-4");
       wishlistContainer.classList.add(`view-${btn.dataset.columns}`);
     });
   });
 
-  // require authentication
-  try {
-    const me = await fetch('/api/user', { credentials: 'include' });
-    if (!me.ok) return window.location.href = 'login.html';
-  } catch (err) {
-    console.error('Auth check failed', err);
-    return window.location.href = 'login.html';
+  if (wishlist.length === 0) {
+  wishlistContainer.classList.add("empty"); // add this line
+  wishlistContainer.innerHTML = `
+    <p class="empty-wishlist-text">Your wishlist is empty ❤️</p>
+  `;
+  return;
+   } 
+  else {
+  wishlistContainer.classList.remove("empty"); // remove when not empty
+  wishlistContainer.innerHTML = "";
   }
 
-  async function renderWishlist() {
-    try {
-      const res = await fetch('/api/wishlist', { credentials: 'include' });
-      const wishlist = await res.json();
+  wishlist.forEach(product => {
+    const wrapper = document.createElement("div");
+    wrapper.classList.add("wrapper");
+    wrapper.dataset.productId = product.id;
 
-      wishlistContainer.innerHTML = '';
-      if (!wishlist || !wishlist.items || wishlist.items.length === 0) {
-        wishlistContainer.innerHTML = '<p>Your wishlist is empty ❤️</p>';
-        return;
-      }
+    const isSoldOut = product.soldOut === true;
 
-      wishlist.items.forEach(product => {
-        const wrapper = document.createElement('div');
-        wrapper.className = 'wrapper';
-        wrapper.dataset.productId = product._id;
-
-        wrapper.innerHTML = `
-          <div class="wishlist-btn"><i class="material-icons" style="color:#ff4d6d;">favorite</i></div>
-          <div class="container">
-            <div class="top">
-              <a href="productdetails.html?id=${product._id}"><img src="${product.image}" alt="${product.name}"></a>
+    wrapper.innerHTML = `
+      <div class="wishlist-btn">
+        <i class="material-icons" style="color:#ff4d6d;">favorite</i>
+      </div>
+      <div class="sold-out-badge">SOLD OUT</div>
+      <div class="container">
+        <div class="top">
+          <a href="productdetails.html?id=${product.id}">
+            <img src="${product.image}" alt="${product.name}" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="left">
+            <div class="details">
+              <h1>${product.name}</h1>
+              <p>
+                <span class="discounted-price">${product.price}</span><br>
+                <span class="mrp">MRP: ${product.mrp}</span>
+              </p>
             </div>
-            <div class="bottom">
-              <div class="left">
-                <div class="details"><h1>${product.name}</h1><p><span class="discounted-price">₹${product.price}</span></p></div>
-                <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-              </div>
+            <div class="buy">
+              <i class="material-icons">add_shopping_cart</i>
             </div>
-          </div>`;
+            <div class="buy-now">BUY<br> NOW</div>
+          </div>
+        </div>
+      </div>
+    `;
 
-        wrapper.querySelector('.wishlist-btn i').addEventListener('click', async () => {
-          try {
-            const r = await fetch(`/api/wishlist/remove/${product._id}`, { method: 'DELETE', credentials: 'include' });
-            if (r.ok) renderWishlist();
-          } catch (e) { console.error(e); }
-        });
-
-        wrapper.querySelector('.buy i').addEventListener('click', async () => {
-          try {
-            const r = await fetch('/api/cart/add', { method: 'POST', credentials: 'include', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ productId: product._id, quantity: 1 }) });
-            if (r.ok) alert('Added to cart!'); else alert('Failed to add to cart');
-          } catch (e) { console.error(e); }
-        });
-
-        wishlistContainer.appendChild(wrapper);
-      });
-    } catch (err) {
-      console.error(err);
-      wishlistContainer.innerHTML = '<p>Error loading wishlist. Please try again later.</p>';
+    if (isSoldOut) {
+      wrapper.classList.add("sold-out");
+      const badge = wrapper.querySelector(".sold-out-badge");
+      badge.style.display = "block";
+      const buyNow = wrapper.querySelector(".buy-now");
+      buyNow.textContent = "SOLD OUT";
+      buyNow.style.background = "gray";
+      buyNow.style.color = "white";
+      buyNow.style.pointerEvents = "none";
+      const addToCart = wrapper.querySelector(".buy i");
+      addToCart.style.opacity = "0.5";
+      addToCart.style.pointerEvents = "none";
     }
-  }
 
-  renderWishlist();
+    // Remove from wishlist
+    wrapper.querySelector(".wishlist-btn i").addEventListener("click", () => {
+      wishlist = wishlist.filter(p => p.id !== product.id);
+      localStorage.setItem("wishlist", JSON.stringify(wishlist));
+      wrapper.remove();
+    });
+
+    // Add to cart
+    wrapper.querySelector(".buy i").addEventListener("click", () => {
+      if (isSoldOut) return;
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const existing = cart.find(p => p.id === product.id);
+      if (existing) existing.quantity += 1;
+      else cart.push({ ...product, quantity: 1 });
+      localStorage.setItem("cart", JSON.stringify(cart));
+      alert(`${product.name} added to cart 🛒`);
+    });
+
+    // Buy Now
+    wrapper.querySelector(".buy-now").addEventListener("click", () => {
+      if (isSoldOut) return;
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const existing = cart.find(p => p.id === product.id);
+      if (existing) existing.quantity += 1;
+      else cart.push({ ...product, quantity: 1 });
+      localStorage.setItem("cart", JSON.stringify(cart));
+      window.location.href = "cart.html";
+    });
+
+    // Product Details Click
+    wrapper.querySelector(".top a").addEventListener("click", (e) => {
+      e.preventDefault();
+      localStorage.setItem("selectedProduct", JSON.stringify(product));
+      window.location.href = "productdetails.html";
+    });
+
+    wishlistContainer.appendChild(wrapper);
+  });
 });
 </script>
 
-<footer class="site-footer"><p>© 2025 V Lady. All rights reserved.</p></footer>
+<footer class="site-footer">
+  <p>© 2025 V Lady. All rights reserved. </p>
+</footer>
 
 </body>
 </html>
