--- a/Frontend/productdetails.html
+++ b/Frontend/productdetails.html
@@ -1,23 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>V Lady</title>
+  <title>V Lady - Product Details</title>
   <link rel="stylesheet" href="productdetails.css" />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-  />
-  <link
-    href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
   <header>
@@ -34,36 +22,37 @@
       </ul>
     </nav>
   </header>
-<!-- Pink Banner -->
-<div class="pink-banner">
-  <div class="scrolling-text">
-    THE LADY WHO LEADS
+
+  <div class="pink-banner">
+    <div class="scrolling-text">THE LADY WHO LEADS</div>
   </div>
-</div>
 
   <div class="product-page">
-    <!-- Product Gallery -->
     <div class="gallery">
       <div class="main-image">
-        <img id="main-img" src="https://images.pexels.com/photos/18458794/pexels-photo-18458794.jpeg" alt="Bag">
+        <img id="main-img" src="" alt="Product">
+        <i id="wishlist-btn" class="fa-regular fa-heart wishlist-icon"></i>
       </div>
-      <div class="thumbnail-container">
-        <img class="thumbnail active" src="https://images.pexels.com/photos/18458794/pexels-photo-18458794.jpeg" alt="Bag 1">
-        <img class="thumbnail" src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Bag 2">
-        <img class="thumbnail" src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Bag 3">
-        <img class="thumbnail" src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Bag 4">
+
+      <!-- Thumbnails Section -->
+      <div class="thumbnail-container" id="thumbnails">
+        <!-- Optional manual thumbnails -->
+        <img id="thumb1" class="thumbnail extra" src="IMG_6724.png" alt="Extra Image 1">
+        <img id="thumb2" class="thumbnail extra" src="IMG_6725.PNG" alt="Extra Image 2">
+        <img id="thumb3" class="thumbnail extra" src="IMG_6727.PNG" alt="Extra Image 3">
       </div>
     </div>
 
-    <!-- Product Details -->
     <div class="details">
-      <h1 class="product-title">Elegant Leather Handbag</h1>
-      <p class="price">₹2,499</p>
-      <p class="description">
-        This elegant leather handbag is perfect for any occasion — stylish, durable, and spacious. 
-        Crafted from high-quality faux leather with premium stitching, it features multiple compartments 
-        and a soft inner lining for your essentials. Perfect for both daily use and travel.
-      </p>
+      <h1 class="product-title"></h1>
+      <p class="price"></p>
+      <p class="mrp" id="mrp-text"></p>
+      <p id="sold-out-text" style="color:red;font-weight:bold;"></p>
+      <p class="description"></p>
+
+      <div class="extra-description" id="extra-desc">
+        Discover the perfect fusion of sophistication and practicality with our V LADY handbag.
+      </div>
 
       <div class="btn-group">
         <button class="btn add-cart">Add to Cart</button>
@@ -72,19 +61,103 @@
     </div>
   </div>
 
-  <script>
-    // Thumbnail image click functionality
-    const thumbnails = document.querySelectorAll(".thumbnail");
-    const mainImg = document.getElementById("main-img");
+<script>
+document.addEventListener("DOMContentLoaded", async () => {
+  const product = JSON.parse(localStorage.getItem("selectedProduct"));
+  if (!product) { window.location.href = "All_Handbags.html"; return; }
 
-    thumbnails.forEach(thumbnail => {
-      thumbnail.addEventListener("click", () => {
-        document.querySelector(".thumbnail.active").classList.remove("active");
-        thumbnail.classList.add("active");
-        mainImg.src = thumbnail.src;
-      });
+  // ===== BASIC PRODUCT DETAILS =====
+  document.querySelector(".product-title").textContent = product.name;
+  document.querySelector(".price").textContent = product.price.includes("₹") ? product.price : "₹" + product.price;
+  document.querySelector("#mrp-text").textContent = product.mrp ? "MRP: " + product.mrp : "";
+  document.querySelector("#sold-out-text").textContent = product.soldOut ? "Sold Out" : "";
+  if (product.desc) { document.querySelector(".description").textContent = product.desc; }
+  else { document.querySelector(".description").style.display = "none"; }
+
+  const mainImg = document.getElementById("main-img");
+  const thumbsContainer = document.getElementById("thumbnails");
+
+  // ===== IMAGES ARRAY =====
+  let allImages = [];
+
+  // 1️⃣ Main product image from card
+  if (product.image) allImages.push(product.image);
+
+  // 2️⃣ Manual thumbnails
+  const manualThumbs = Array.from(document.querySelectorAll(".thumbnail.extra")).filter(t => t.src);
+  manualThumbs.forEach(t => allImages.push(t.src));
+
+  // 3️⃣ Database images
+  try {
+    const response = await fetch(`https://your-database-api.com/product/${product.id}`);
+    const data = await response.json();
+    const dbImages = [data.image1, data.image2, data.image3].filter(Boolean);
+    dbImages.forEach(img => allImages.push(img));
+
+    // Extra description from DB
+    if (data.fullDescription) document.getElementById("extra-desc").textContent = data.fullDescription;
+  } catch (err) { console.error("Error fetching extra product details:", err); }
+
+  // ===== DISPLAY THUMBNAILS =====
+  thumbsContainer.innerHTML = ""; // clear container
+
+  allImages.forEach((src, index) => {
+    const t = document.createElement("img");
+    t.src = src;
+    t.classList.add("thumbnail");
+    if (index === 0) { t.classList.add("active"); mainImg.src = src; } // first image active
+    t.addEventListener("click", () => {
+      document.querySelector(".thumbnail.active")?.classList.remove("active");
+      t.classList.add("active");
+      mainImg.src = src;
     });
-  </script>
+    thumbsContainer.appendChild(t);
+  });
 
+  // ===== WISHLIST =====
+  const wishlistBtn = document.getElementById("wishlist-btn");
+  let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
+  if (wishlist.find(p => p.id === product.id)) wishlistBtn.classList.replace("fa-regular", "fa-solid");
+  wishlistBtn.addEventListener("click", () => {
+    let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
+    const exists = wishlist.find(p => p.id === product.id);
+    if (exists) {
+      wishlist = wishlist.filter(p => p.id !== product.id);
+      wishlistBtn.classList.replace("fa-solid", "fa-regular");
+    } else {
+      wishlist.push(product);
+      wishlistBtn.classList.replace("fa-regular", "fa-solid");
+    }
+    localStorage.setItem("wishlist", JSON.stringify(wishlist));
+  });
+
+  // ===== ADD TO CART & BUY NOW =====
+  const addCart = document.querySelector(".add-cart");
+  const buyNow = document.querySelector(".buy-now");
+
+  if (product.soldOut) {
+    addCart.disabled = true; buyNow.disabled = true;
+    addCart.style.cursor = "not-allowed"; buyNow.style.cursor = "not-allowed";
+    buyNow.textContent = "SOLD OUT"; buyNow.style.background = "gray";
+  } else {
+    addCart.addEventListener("click", () => {
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const existing = cart.find(p => p.id === product.id);
+      if (existing) existing.quantity += 1;
+      else cart.push({ ...product, quantity: 1 });
+      localStorage.setItem("cart", JSON.stringify(cart));
+      alert(`${product.name} added to Cart 🛒`);
+    });
+
+    buyNow.addEventListener("click", () => {
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const existing = cart.find(p => p.id === product.id);
+      if (!existing) cart.push({ ...product, quantity: 1 });
+      localStorage.setItem("cart", JSON.stringify(cart));
+      window.location.href = "cart.html";
+    });
+  }
+});
+</script>
 </body>
 </html>
