--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -31,6 +31,8 @@
         <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
         <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
         <li><a href="#contact-section"><i class="fa fa-envelope"></i></a></li>
+        
+        <li><a href="login.html"><i class="fa fa-user"></i></a></li>
       </ul>
     </nav>
   </header>
