--- a/Frontend/productdetails.html
+++ b/Frontend/productdetails.html
@@ -62,101 +62,100 @@
   </div>
 
 <script>
-document.addEventListener("DOMContentLoaded", async () => {
+document.addEventListener("DOMContentLoaded", () => {
   const product = JSON.parse(localStorage.getItem("selectedProduct"));
-  if (!product) { window.location.href = "All_Handbags.html"; return; }
+  if (!product) { 
+    // Redirect if no product is found
+    window.location.href = "All_Handbags.html"; 
+    return; 
+  }
 
-  // ===== BASIC PRODUCT DETAILS =====
+  // ===== POPULATE PRODUCT DETAILS =====
   document.querySelector(".product-title").textContent = product.name;
-  document.querySelector(".price").textContent = product.price.includes("₹") ? product.price : "₹" + product.price;
-  document.querySelector("#mrp-text").textContent = product.mrp ? "MRP: " + product.mrp : "";
-  document.querySelector("#sold-out-text").textContent = product.soldOut ? "Sold Out" : "";
-  if (product.desc) { document.querySelector(".description").textContent = product.desc; }
-  else { document.querySelector(".description").style.display = "none"; }
+  document.querySelector(".price").textContent = `₹${product.price}`;
+  document.querySelector("#mrp-text").textContent = product.MRP ? `MRP: ₹${product.MRP}` : "";
+  document.querySelector(".description").textContent = product.description || "No description available.";
 
   const mainImg = document.getElementById("main-img");
   const thumbsContainer = document.getElementById("thumbnails");
+  thumbsContainer.innerHTML = ""; // Clear any manual thumbnails
 
-  // ===== IMAGES ARRAY =====
-  let allImages = [];
+  // ===== BUILD IMAGE GALLERY =====
+  if (product.images && product.images.length > 0) {
+    // Set the main image to the first image in the array
+    mainImg.src = product.images[0];
 
-  // 1️⃣ Main product image from card
-  if (product.image) allImages.push(product.image);
+    // Create a thumbnail for each image
+    product.images.forEach((imageUrl, index) => {
+      const thumb = document.createElement("img");
+      thumb.src = imageUrl;
+      thumb.classList.add("thumbnail");
+      if (index === 0) {
+        thumb.classList.add("active");
+      }
 
-  // 2️⃣ Manual thumbnails
-  const manualThumbs = Array.from(document.querySelectorAll(".thumbnail.extra")).filter(t => t.src);
-  manualThumbs.forEach(t => allImages.push(t.src));
+      // Add click event to change main image
+      thumb.addEventListener("click", () => {
+        mainImg.src = imageUrl;
+        // Update active state
+        document.querySelector(".thumbnail.active")?.classList.remove("active");
+        thumb.classList.add("active");
+      });
 
-  // 3️⃣ Database images
-  try {
-    const response = await fetch(`https://your-database-api.com/product/${product.id}`);
-    const data = await response.json();
-    const dbImages = [data.image1, data.image2, data.image3].filter(Boolean);
-    dbImages.forEach(img => allImages.push(img));
-
-    // Extra description from DB
-    if (data.fullDescription) document.getElementById("extra-desc").textContent = data.fullDescription;
-  } catch (err) { console.error("Error fetching extra product details:", err); }
-
-  // ===== DISPLAY THUMBNAILS =====
-  thumbsContainer.innerHTML = ""; // clear container
-
-  allImages.forEach((src, index) => {
-    const t = document.createElement("img");
-    t.src = src;
-    t.classList.add("thumbnail");
-    if (index === 0) { t.classList.add("active"); mainImg.src = src; } // first image active
-    t.addEventListener("click", () => {
-      document.querySelector(".thumbnail.active")?.classList.remove("active");
-      t.classList.add("active");
-      mainImg.src = src;
+      thumbsContainer.appendChild(thumb);
     });
-    thumbsContainer.appendChild(t);
-  });
+  } else {
+    // Fallback if no images are available
+    mainImg.src = 'placeholder.jpg';
+  }
 
-  // ===== WISHLIST =====
+  // ===== WISHLIST FUNCTIONALITY =====
   const wishlistBtn = document.getElementById("wishlist-btn");
   let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
-  if (wishlist.find(p => p.id === product.id)) wishlistBtn.classList.replace("fa-regular", "fa-solid");
+  const productId = product._id || `seed_${product.name.replace(/\s/g, '_')}`;
+
+  if (wishlist.find(p => p.id === productId)) {
+      wishlistBtn.classList.replace("fa-regular", "fa-solid");
+  }
+
   wishlistBtn.addEventListener("click", () => {
     let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
-    const exists = wishlist.find(p => p.id === product.id);
+    const exists = wishlist.find(p => p.id === productId);
     if (exists) {
-      wishlist = wishlist.filter(p => p.id !== product.id);
+      wishlist = wishlist.filter(p => p.id !== productId);
       wishlistBtn.classList.replace("fa-solid", "fa-regular");
     } else {
-      wishlist.push(product);
+      wishlist.push({ ...product, id: productId });
       wishlistBtn.classList.replace("fa-regular", "fa-solid");
     }
     localStorage.setItem("wishlist", JSON.stringify(wishlist));
   });
 
-  // ===== ADD TO CART & BUY NOW =====
-  const addCart = document.querySelector(".add-cart");
-  const buyNow = document.querySelector(".buy-now");
+  // ===== ADD TO CART & BUY NOW FUNCTIONALITY =====
+  const addCartBtn = document.querySelector(".add-cart");
+  const buyNowBtn = document.querySelector(".buy-now");
 
-  if (product.soldOut) {
-    addCart.disabled = true; buyNow.disabled = true;
-    addCart.style.cursor = "not-allowed"; buyNow.style.cursor = "not-allowed";
-    buyNow.textContent = "SOLD OUT"; buyNow.style.background = "gray";
-  } else {
-    addCart.addEventListener("click", () => {
-      let cart = JSON.parse(localStorage.getItem("cart")) || [];
-      const existing = cart.find(p => p.id === product.id);
-      if (existing) existing.quantity += 1;
-      else cart.push({ ...product, quantity: 1 });
-      localStorage.setItem("cart", JSON.stringify(cart));
-      alert(`${product.name} added to Cart 🛒`);
-    });
+  addCartBtn.addEventListener("click", () => {
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const existing = cart.find(p => p.id === productId);
+    if (existing) {
+      existing.quantity += 1;
+    } else {
+      cart.push({ ...product, id: productId, quantity: 1 });
+    }
+    localStorage.setItem("cart", JSON.stringify(cart));
+    alert(`${product.name} added to Cart 🛒`);
+  });
 
-    buyNow.addEventListener("click", () => {
-      let cart = JSON.parse(localStorage.getItem("cart")) || [];
-      const existing = cart.find(p => p.id === product.id);
-      if (!existing) cart.push({ ...product, quantity: 1 });
-      localStorage.setItem("cart", JSON.stringify(cart));
-      window.location.href = "cart.html";
-    });
-  }
+  buyNowBtn.addEventListener("click", () => {
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const existing = cart.find(p => p.id === productId);
+    if (!existing) {
+      cart.push({ ...product, id: productId, quantity: 1 });
+    }
+    localStorage.setItem("cart", JSON.stringify(cart));
+    window.location.href = "cart.html";
+  });
 });
 </script>
 </body>
